--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "start": "brunch watch --server",
-    "deploy": "npm install && npm start",
-    "prod": "rm -r public/ && brunch build --production"
+    "build": "rm -r public/ && brunch build --production",
+    "publish": "gh-pages -d public"
   },
   "dependencies": {
     "dat-gui": "^0.5.0",
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.0",
     "eslint-plugin-react": "^6.2.0",
+    "gh-pages": "^2.0.1",
     "glslify-brunch": "^1.0.0",
     "javascript-brunch": "^2.0.0",
     "jsx-ast-utils": "^1.3.1",
